@@ -608,7 +608,7 @@ case "$target" in
  *) AC_CHECK_FUNCS(ntp_adjtime ntp_gettime)
     ;;
 esac
-AC_CHECK_FUNCS(plock pututline pututxline rtprio)
+AC_CHECK_FUNCS(plock pututline pututxline readlink rtprio)
 case "$ac_cv_func_mrand48" in
  yes) ;;
  *) AC_REPLACE_FUNCS(random) ;;
