@@ -1,3 +1,10 @@
+2000-08-01  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* util/ntp-genkeys.c (main): Use snifflink()
+	(snifflink): Implement...
+
+	* configure.in: Check for readlink()
+
 2000-07-31  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* util/ntp-genkeys.c (main): Use strdup on the tokens returned
